<resources>
    <string name="app_name">Submission3</string>
    <string name="name">name</string>
    <string name="username">username</string>
    <string name="repository">repository</string>
    <string name="repo">Repository</string>
    <string name="flwrs">Followers</string>
    <string name="followers">followers</string>
    <string name="flwng">Following</string>
    <string name="following">following</string>
    <string name="search">Search</string>
    <string name="search_hint">Type Here</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="share">Share</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="followerstab">Followers</string>
    <string name="followingtab">Following</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="change_language">Change Language</string>
    <string name="favorite_list">Favorite List</string>
</resources>